--- a/app/views/appeal/full/v5/prepare-appeal/agent-check-joint-application.html
+++ b/app/views/appeal/full/v5/prepare-appeal/agent-check-joint-application.html
@@ -4,8 +4,8 @@
 
 {% block questions %}
   {{ govukRadios({
-    idPrefix: 'appellant-check',
-    name: 'appellant-check',
+    idPrefix: 'agent-check-joint-application',
+    name: 'agent-check-joint-application',
     classes: '',
     fieldset: {
       legend: {
@@ -18,12 +18,12 @@
       {
         html: data['new-appellant-full-name'] or 'Jan Fisher',
         value: 'Jan Fisher',
-        checked: checked('appellant-check','Jan Fisher')
+        checked: checked('agent-check-joint-application','Jan Fisher')
       },
       {
         html: 'Robin Fisher',
         value: 'Robin Fisher',
-        checked: checked('appellant-check','Robin Fisher')
+        checked: checked('agent-check-joint-application','Robin Fisher')
       },
       {
         divider: "or"
@@ -31,7 +31,7 @@
       {
         html: 'I am appealing on behalf of the individuals on the planning application',
         value: 'other',
-        checked: checked('appellant-check','other')
+        checked: checked('agent-check-joint-application','other')
       }
     ]
   }) }}
