S78 check answers, h2 size change for documents

--- a/app/views/appeal/full/v5/check-your-answers.html
+++ b/app/views/appeal/full/v5/check-your-answers.html
@@ -454,22 +454,7 @@
         ]
       }) }}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <h2 class="govuk-heading-m">
+      <h2 class="govuk-heading-l">
         Upload documents
       </h2>
 
