--- a/app/views/appeal/full/v5/check-your-answers.html
+++ b/app/views/appeal/full/v5/check-your-answers.html
@@ -12,20 +12,16 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
 
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-m">
         Prepare appeal
       </h2>
 
-      <h3 class="govuk-heading-m">
-        Your details
-      </h3>
-
       {{ govukSummaryList({
-        classes: "govuk-!-margin-bottom-9",
+        classes: "long-answers govuk-!-margin-bottom-9",
         rows: [
           {
             key: {
@@ -111,17 +107,7 @@
                 }
               ]
             }
-          } if data['appellant-check'] == 'Joint application'
-        ]
-      }) }}
-
-      <h3 class="govuk-heading-m">
-        Site details
-      </h3>
-
-      {{ govukSummaryList({
-        classes: "govuk-!-margin-bottom-9",
-        rows: [
+          } if data['appellant-check'] == 'Joint application',
           {
             key: {
               text: "Site address"
@@ -226,17 +212,7 @@
                 }
               ]
             }
-          } if data['site-visibility'] == 'No'
-        ]
-      }) }}
-
-      <h3 class="govuk-heading-m">
-        Your application
-      </h3>
-
-      {{ govukSummaryList({
-        classes: "long-answers govuk-!-margin-bottom-9",
-        rows: [
+          } if data['site-visibility'] == 'No',
           {
             key: {
               text: "Application reference"
@@ -304,17 +280,7 @@
                 }
               ]
             }
-          }
-        ]
-      }) }}
-
-      <h3 class="govuk-heading-m">
-        Your appeal
-      </h3>
-
-      {{ govukSummaryList({
-        classes: "long-answers govuk-!-margin-bottom-9",
-        rows: [
+          },
           {
             key: {
               text: "Appeal procedure"
