Check your answers change

--- a/app/views/appeal/full/v5/check-your-answers.html
+++ b/app/views/appeal/full/v5/check-your-answers.html
@@ -420,7 +420,7 @@
         ]
       }) }}
 
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-m">
         Upload documents
       </h2>
 
