--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -54,7 +54,7 @@
 						res.locals['return'] = true
 					#}
 					{% if return == true %}
-						<p class="govuk-body"><a href="../task-list" class="govuk-link--no-visited-state">Return to questionnaire homepage</a></p>
+						<p class="govuk-body"><a href="../task-list" class="govuk-link--no-visited-state">Return to your appeal</a></p>
 					{% endif %}
 				{% endblock %}
 
