--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -195,6 +195,21 @@
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
   </div>
 
+  <!-- {% if data['appeal-type'] == 'inquiry'  %}
+
+  <!-- event dates -->
+  <!-- <div class="govuk-grid-column-full">
+    <h2 class="govuk-heading-l">
+      Event dates
+    </h2>
+
+    {% include "/_includes/appellant/meta-event-dates.html" %}
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+  </div> -->
+
+  <!-- {% endif %} -->
+
+  <!-- the appeal -->
   <div class="govuk-grid-column-two-thirds">
 
     <h2 class="govuk-heading-l">
