--- a/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
+++ b/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
@@ -27,7 +27,7 @@
 
         {
           key: {
-            text: 'Appellant 1'
+            text: 'Applicant 1'
           },
           value: {
             html: (data['new-appellant-full-name'] or 'Jan Fisher')
@@ -44,7 +44,7 @@
         },
         {
           key: {
-            text: 'Appellant 2'
+            text: 'Applicant 2'
           },
           value: {
             html: 'Robin Fisher'
