--- a/app/views/appeal/full/v5/declaration.html
+++ b/app/views/appeal/full/v5/declaration.html
@@ -10,13 +10,22 @@
         {{ title }}
       </h1>
 
-      <p class="govuk-!-margin-bottom-2">By submitting the appeal, you confirm you understand that:</p>
+      <p class="govuk-!-margin-bottom-2">
+        By submitting the appeal, you confirm you understand that:
+      </p>
+
       <ul class="govuk-list govuk-list--bullet">
-        <li>this is your only opportunity to submit the appeal</li>
-        <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
+        <li>
+          this is your only opportunity to submit the appeal
+        </li>
+        <li>
+          if you have not included all the information we’ve requested, we may not be able to progress your appeal
+        </li>
       </ul>
 
-      <p class="govuk-body">You also confirm that, to the best of your knowledge, the details you are providing are correct.</p>
+      <p class="govuk-body">
+        You also confirm that, to the best of your knowledge, the details you are providing are correct.
+      </p>
 
       {{ govukButton({
         html: 'Accept and submit',
