--- a/app/views/appeal/appeals/v2/appellant-submission-full.html
+++ b/app/views/appeal/appeals/v2/appellant-submission-full.html
@@ -1,5 +1,7 @@
 {% extends '_layouts/layout-main.html' %}
 
+{% set serviceName = "Appeal a planning decision" %}
+
 {% set title = "Appeal "+(data['appealCode'] or '01234567') %}
 
 {% block pageTitle %}
