Declaration content update

--- a/app/views/appeal/full/v5/declaration.html
+++ b/app/views/appeal/full/v5/declaration.html
@@ -11,15 +11,18 @@
       </h1>
 
       <p class="govuk-!-margin-bottom-2">
-        By submitting the appeal, you confirm you understand that:
+        By submitting the appeal, you confirm that you:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          this is your only opportunity to submit the appeal
+          understand that this is your only opportunity to submit the appeal
         </li>
         <li>
-          if you have not included all the information we’ve requested, we may not be able to progress your appeal
+          understand that if you have not included all the information we’ve requested, we may not be able to progress your appeal
+        </li>
+        <li>
+          have read and agree to our <a href="https://www.gov.uk/government/publications/planning-inspectorate-privacy-notices/customer-privacy-notice" class="govuk-link">privacy notice</a>
         </li>
       </ul>
 
