Logic for statement of common ground on task list

--- a/app/views/appeal/full/v5/task-list__upload.html
+++ b/app/views/appeal/full/v5/task-list__upload.html
@@ -53,7 +53,7 @@
         {% endif %}
       </div>
     </li>
-    {% if data['procedure'] != "Written representations" %}
+    {% if data['procedure'] == "Hearing" or data['procedure'] == "Inquiry" %}
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="upload-documents/statement-of-common-ground" aria-describedby="company-details-4-status">
