--- a/app/views/appeal/full/v5/upload-documents/planning-obligation-check.html
+++ b/app/views/appeal/full/v5/upload-documents/planning-obligation-check.html
@@ -13,6 +13,9 @@
         isPageHeading: true
       }
     },
+    hint: {
+      html: '<p class="govuk-body">A planning obligation (a section 106 agreement or unilateral undertaking) is a legal agreement that’s linked to your planning permission. It confirms that you agree to extra conditions if your development goes ahead.</p>'
+    },
     items: [
       {
         html: 'Yes',
