Addition of XLS documents for upload pages

--- a/app/views/appeal/full/v5/upload-documents/appeal-statement.html
+++ b/app/views/appeal/full/v5/upload-documents/appeal-statement.html
@@ -124,7 +124,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
+        text: 'The file must be a DOC, DOCX, PDF, XLS, TIF, JPG or PNG and be smaller than 25MB'
       }
     }) }}
 
