--- a/app/views/appeal/full/v5/upload-documents/description-of-development-agreement.html
+++ b/app/views/appeal/full/v5/upload-documents/description-of-development-agreement.html
@@ -21,7 +21,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
+        text: 'The file must be a DOC, DOCX, PDF, XLS, TIF, JPG or PNG and be smaller than 25MB'
       }
     }) }}
 
