--- a/app/views/appeal/full/v5/upload-documents/statement-of-common-ground.html
+++ b/app/views/appeal/full/v5/upload-documents/statement-of-common-ground.html
@@ -17,7 +17,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        text: 'The file must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
+        text: 'The file must be a DOC, DOCX, PDF, XLS, TIF, JPG or PNG and be smaller than 25MB'
       }
     }) }}
 
