--- a/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
+++ b/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Enter the description of development' %}
+{% set title = 'Enter description of development' %}
 
 {% block questions %}
 
@@ -14,7 +14,7 @@
       isPageHeading: true
     },
     hint: {
-      text: "Enter all of the text of the agreed description."
+      text: "Enter the description of development that you submitted in your planning application."
     }
   }) }}
 
