IP service consistency for appeal ref number

--- a/app/views/interested/find-appeal/v10/appeal-search-address.html
+++ b/app/views/interested/find-appeal/v10/appeal-search-address.html
@@ -53,7 +53,7 @@
 
     <p class="govuk-body">
       <a href="appeal-search-number?search=number">
-        Search with the appeal reference
+        Search with the appeal reference number
       </a>
     </p>
 
