--- a/app/views/interested/find-appeal/v10/open-appeals.html
+++ b/app/views/interested/find-appeal/v10/open-appeals.html
@@ -56,8 +56,8 @@
 
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-          <th class="govuk-table__header govuk-!-width-one-quarter" scope="col">
-            Appeal reference
+          <th class="govuk-table__header" scope="col">
+            Appeal reference number
           </th>
           <th class="govuk-table__header govuk-!-width-one-third" scope="col">
             Appeal site
