--- a/app/views/appeal/full/v5/upload-documents/ownership-certificate.html
+++ b/app/views/appeal/full/v5/upload-documents/ownership-certificate.html
@@ -17,7 +17,7 @@
         classes: 'govuk-label--m'
       },
       hint: {
-        text: 'The files must be a DOC, DOCX, PDF, TIF, JPG or PNG and be smaller than 15MB'
+        text: 'Each file must be a DOC, DOCX, PDF, XLS, TIF, JPG or PNG and smaller than 25MB.'
       },
       attributes: { multiple: '' }
     }) }}
