S78 content updates for contact details section

--- a/app/views/appeal/full/v5/prepare-appeal/agent-check-joint-application.html
+++ b/app/views/appeal/full/v5/prepare-appeal/agent-check-joint-application.html
@@ -29,7 +29,7 @@
         divider: "or"
       },
       {
-        html: 'I am appealing on behalf of the individuals on the planning application',
+        html: 'I am appealing on behalf of the group of individuals',
         value: 'other',
         checked: checked('agent-check-joint-application','other')
       }
