--- a/app/views/appeal/full/v5/prepare-appeal/appellant-company.html
+++ b/app/views/appeal/full/v5/prepare-appeal/appellant-company.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What is the name of the company?' %}
+{% set title = 'What is the name of the organisation?' %}
 
 {% block questions %}
 
@@ -11,7 +11,7 @@
       isPageHeading: true
     },
     hint: {
-      text: "Enter the name of the company on the planning application."
+      text: "Enter the name of the organisation on the planning application."
     },
     id: "appellant-company-name",
     name: "appellant-company-name",
