--- a/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
+++ b/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
@@ -1,6 +1,10 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'You have added an individual' %}
+{% if data['multiplenames'] != 'yes' %}
+  {% set title = 'You have added an individual' %}
+{% else %}
+  {% set title = 'You have added 2 individuals' %}
+{% endif %}
 
 {% set prototypeLinks = [
   {
