--- a/app/views/appeal/full/v5/prepare-appeal/contact-phone-number.html
+++ b/app/views/appeal/full/v5/prepare-appeal/contact-phone-number.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Enter a contact phone number for this appeal' %}
+{% set title = 'What is your phone number?' %}
 
 {% block questions %}
 
@@ -13,7 +13,7 @@
   }) %}
 
   <p class="govuk-hint">
-    We may use this number to contact you about appeal site visits.
+    We may use your phone number to contact you about the appeal.
   </p>
 
   {{ govukInput({
