--- a/app/views/appeal/full/v5/prepare-appeal/add-appellant-name.html
+++ b/app/views/appeal/full/v5/prepare-appeal/add-appellant-name.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Who made the planning application?' %}
+{% set title = 'What is the name of the individual who made the planning application?' %}
 
 {% block questions %}
 
@@ -13,7 +13,7 @@
   }) %}
 
   <p class="govuk-hint">
-     Enter the name of each individual on the planning application.
+     Enter the name of each individual on the planning application. You can add more names later.
   </p>
 
   {{ govukInput({
