S78 appeal statement check + before you continue list content update

--- a/app/views/appeal/full/v5/before-you-continue.html
+++ b/app/views/appeal/full/v5/before-you-continue.html
@@ -30,7 +30,7 @@
       plans, drawings and supporting documents for your application
     </li>
     <li>
-      new, plans or drawings to support your appeal
+      new plans or drawings to support your appeal
     </li>
     <li>
       other documents to support your appeal
