Planning obligation content update

--- a/app/views/appeal/full/v5/upload-documents/planning-obligation-check.html
+++ b/app/views/appeal/full/v5/upload-documents/planning-obligation-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Do you plan to submit a planning obligation to support your appeal?' %}
+{% set title = 'Do you have a planning obligation to support your appeal?' %}
 
 {% block questions %}
   {{ govukRadios({
