Phone number paragraph text inplace of hint text

--- a/app/views/appeal/full/v5/prepare-appeal/contact-phone-number.html
+++ b/app/views/appeal/full/v5/prepare-appeal/contact-phone-number.html
@@ -12,7 +12,7 @@
     }
   }) %}
 
-  <p class="govuk-hint">
+  <p class="govuk-body">
     We may use your phone number to contact you about the appeal.
   </p>
 
